# RotorQuant

./: .env.example  .gitignore  CMakeLists.txt  README.md  bindings.cpp  fwht_quant.air  fwht_quant.metal  fwht_quant.metallib  lloyd_max.cpp  lloyd_max.h  metal_kernel.mm  quantize.py  requirements.txt  rotation.cpp  rotation.h  rotorQuant.cpp  rotorQuant.h  setup.py  test_rotorQuant.cpp  train.py
